# peer-to-peer-trading

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
clients/: setup.ts  solspl.ts  splsol.ts  splspl.ts
clients/keys/: trade_p2p-keypair.json  userA.json  userB.json
clients/p2p/: TradeP2P.ts  index.ts  types.ts  utils.ts
programs/trade-p2p/: Cargo.toml
programs/trade-p2p/src/: constant.rs  error.rs  lib.rs  seed.rs  state.rs  utils.rs
programs/trade-p2p/src/processor/: cancel.rs  create.rs  exchange.rs  mod.rs
